<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.arcbees.plugin</groupId>
    <artifactId>gwtp-idea</artifactId>
    <version>1.2.1</version>
    <name>GWTP IntelliJ Plugin</name>
    <description>The GWTP IDEA plugin provides tools for GWT-Platform framework in IntelliJ IDEA</description>

    <properties>
        <vendor.url>http://www.arcbees.com</vendor.url>
        <vendor.email>support@arcbees.com</vendor.email>
        <vendor.name>ArcBees</vendor.name>

        <ideaIC.filename>ideaIC-${intellij.version}</ideaIC.filename>
        <intellij.path>${project.build.directory}/dependency/IntelliJ-IDEA-CE/idea-IC-${intellij.build}</intellij.path>
        <intellij.libs>${intellij.path}/lib/</intellij.libs>
        <intellij.maven>${intellij.path}/plugins/maven/lib/</intellij.maven>

        <intellij.build>141.1010.3</intellij.build>
        <rest-assured.version>2.4.1</rest-assured.version>
        <maven-invoker.version>2.2</maven-invoker.version>
        <ide-templates.version>1.0.0-SNAPSHOT</ide-templates.version>
        <intellij.version>14.1.3</intellij.version>

        <download-maven-plugin.version>1.2.1</download-maven-plugin.version>
        <maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
        <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
        <maven-assembly-plugin.version>2.5.3</maven-assembly-plugin.version>

        <jdk.version>1.6</jdk.version>
        <ij.plugin>true</ij.plugin>
    </properties>

    <repositories>
        <repository>
            <id>sonatype.snapshots</id>
            <name>Sonatype snapshot repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>sonatype-public-repository</id>
            <url>https://oss.sonatype.org/content/groups/public</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>intellij-ce</artifactId>
            <version>${intellij.version}</version>
            <type>tar.gz</type>
            <scope>system</scope>
            <systemPath>${basedir}/${ideaIC.filename}.tar.gz</systemPath>
        </dependency>

        <dependency>
            <groupId>com.arcbees.plugin</groupId>
            <artifactId>plugin-templates</artifactId>
            <version>${ide-templates.version}</version>
        </dependency>
        <dependency>
            <groupId>com.jayway.restassured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${rest-assured.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.shared</groupId>
            <artifactId>maven-invoker</artifactId>
            <version>${maven-invoker.version}</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>com.googlecode.maven-download-plugin</groupId>
                <artifactId>download-maven-plugin</artifactId>
                <version>${download-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>download-intellij</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>wget</goal>
                        </goals>
                        <configuration>
                            <url>https://d1opms6zj7jotq.cloudfront.net/idea/ideaIC-14.1.3.tar.gz</url>
                            <unpack>false</unpack>
                            <outputDirectory>${basedir}</outputDirectory>
                            <overwrite>false</overwrite>
                            <outputFileName>${ideaIC.filename}.tar.gz</outputFileName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven-dependency-plugin.version}</version>
                <executions>
                    <execution>
                        <id>unzip-distribution</id>
                        <goals>
                            <goal>unpack-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeArtifactIds>intellij-ce</includeArtifactIds>
                            <outputDirectory>${project.build.directory}/dependency/IntelliJ-IDEA-CE</outputDirectory>
                            <includes>**/*.jar</includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <compilerArgs>
                        <arg>-Djava.ext.dirs=${intellij.libs};${intellij.maven}</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <id>compile-forms</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <path id="maven.plugin.complete.classpath">
                                    <path refid="maven.plugin.classpath"/>
                                    <fileset dir="${intellij.libs}">
                                        <include name="**/*.jar"/>
                                    </fileset>
                                    <fileset dir="${intellij.maven}">
                                        <include name="**/*.jar"/>
                                    </fileset>
                                </path>
                                <taskdef name="instrumentIdeaExtensions"
                                         classname="com.intellij.ant.InstrumentIdeaExtensions"
                                         classpathref="maven.plugin.complete.classpath"/>
                                <path id="sourcepath">
                                    <dirset dir="${project.basedir}">
                                        <include name="src/main/java"/>
                                        <include name="src/main/resources"/>
                                    </dirset>
                                </path>
                                <instrumentIdeaExtensions destdir="${project.build.outputDirectory}"
                                                          extdirs="${intellij.libs}">
                                    <classpath refid="maven.compile.classpath"/>
                                    <src refid="sourcepath"/>
                                </instrumentIdeaExtensions>
                            </target>
                        </configuration>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.sun</groupId>
                        <artifactId>tools</artifactId>
                        <version>jdkVersion</version>
                        <scope>system</scope>
                        <systemPath>${env.JAVA_HOME}/lib/tools.jar</systemPath>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven-assembly-plugin.version}</version>
                <configuration>
                    <descriptors>
                        <descriptor>src/main/assembly/zip.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>dev</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>unzip-distribution</id>
                                <phase>validate</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>local</id>

            <dependencies>
                <dependency>
                    <groupId>maven</groupId>
                    <artifactId>maven</artifactId>
                    <version>${intellij.version}</version>
                    <scope>provided</scope>
                    <systemPath>${project.basedir}/lib/maven-${intellij.version}.jar</systemPath>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
</project>
